# hexapod

./: .gitignore  CLAUDE.md  hexapod.code-workspace  main.py  pyproject.toml  reset.py  soft_limits.json
docs/: kinematics.md
hexapod/: body_ik.py  gait.py  kinematics.py
hexapod/control/: __init__.py  state.py  thread.py
hexapod/robot/: config.py  soft_limits.py
hexapod/servo/: motion.py  protocol.py  registers.py  st3020.py  transport.py
scripts/: body_control.py  calibrate.py  calibrate_soft_limits.py  leg_test.py  monitor_positions.py  ping_all.py  web_control.py
tests/: test_body_ik.py  test_kinematics.py
